--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,15 @@ dependencies:
   intro_screen_onboarding_flutter: ^1.0.0
   onboarding: ^3.1.0
   animated_login: ^1.7.0
+  dartz: ^0.10.1
+  injectable: ^2.1.2
+  freezed_annotation: ^2.2.0
+  flutter_bloc: ^8.1.3
+  firebase_core: ^2.13.1
+  firebase_auth: ^4.6.2
+  google_sign_in: ^6.1.4
+  cloud_firestore: ^4.8.0
+  
 
 dev_dependencies:
   flutter_test:
